--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>OnePage</title>
 </head>
 <body>
-    <img src="imagen (1).jpg"alt="">
+    <ul>
+        <li>Nosotros</li>
+        <li>Reservas</li>
+        <li>Contacto</li>
+    </ul>
+   <img src="imagen (1).jpg"alt="">
     <h1>Gin Tonic Club</h1>
     <p>Bienvenidos a la casa del Gin & Tonic</p>
    <div> 
